# atty

./: CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_PROCESS.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: lint.yml  main.yml  pr_checks.yml  release.yml  test.yml
atty/: __main__.py  cli.py  main.py
docs/source/: conf.py  index.md  installation.md
scripts/: prepare_changelog.py  release.sh
tests/: test_main.py
tests/.config/alacritty/: color.toml
