[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atty"
dynamic = ["version"]
readme = "README.md"
keywords = ["cli", "interactive", "console", "terminal", "alacritty"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT",
  "Programming Language :: Python :: 3",
  'Topic :: Terminals',
  'Environment :: Console',
  'Intended Audience :: Developers',
]
authors = [{ name = "Michell Stuttgart", email = "michellstut@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["click", "beaupy", "tomli", "tomli_w"]

license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/mstuttgart/atty"
Repository = "https://github.com/mstuttgart/atty"
Changelog = "https://github.com/mstuttgart/atty/blob/main/CHANGELOG.md"
# Documentation = "https://atty.readthedocs.io/"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy>=1.0,<1.11",
  "black>=23.0,<24.0",
  "isort>=5.12,<5.13",
  "pytest",
  "pytest-sphinx",
  "pytest-cov",
  "twine>=1.11.0",
  "build",
  "setuptools",
  "wheel",
  "Sphinx>=4.3.0,<7.1.0",
  "furo==2023.7.26",
  "myst-parser>=1.0,<2.1",
  "sphinx-copybutton==0.5.2",
  "sphinx-autobuild==2021.3.14",
  "sphinx-autodoc-typehints==1.23.3",
  "packaging",
]

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "docs*", "scripts*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
atty = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "atty.version.VERSION" }

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
