[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atty"
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Michell Stuttgart", email = "michellstut@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  'Topic :: Terminals',
  'Environment :: Console',
  'Intended Audience :: Developers',
]
keywords = ["cli", "interactive", "console", "terminal", "alacritty"]
dependencies = ["click", "beaupy", "tomli", "tomli_w"]

license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/mstuttgart/atty"
Repository = "https://github.com/mstuttgart/atty"
Changelog = "https://github.com/mstuttgart/atty/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["nox>=2022.11.21", "ruff", "black>=23.0,<24.0", "isort>=5.12,<5.13", "pytest"]

coverage = ["coveralls>=3.3.1", "pytest-cov>=4.0.0", "requests-mock>=1.10.0"]

release = ["twine>=1.11.0", "build", "setuptools", "wheel", "packaging"]

[project.scripts]
atty = "atty.main:atty"

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "docs*", "scripts*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
atty = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "atty.version.VERSION" }

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
    | \.nox\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
